--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>jenkins-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>jenkins-demo</name>
     <description>jenkins-demo</description>
     <properties>
